fix: hide scrollbar on firefox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  scrollbar-width: none;
 }
 
 h1 {
